minor updates to pedestrian riddle

--- a/public/index.html
+++ b/public/index.html
@@ -86,7 +86,7 @@
         <div class="summaryt">
           
         
-        This post contains solutions to FiveThirtyEight’s two riddles released 2020-02-14, Riddler Express and Riddler Classic. I used animatrixr (a toy package I wrote) to help with some of the &hellip;</div>
+        This post contains solutions to FiveThirtyEight’s two riddles released 2020-02-14, Riddler Express and Riddler Classic. I used animatrixr1 to help with some of the visualizations and computations for &hellip;</div>
         </a>
       </div>
 
