edited eyball post

--- a/public/index.html
+++ b/public/index.html
@@ -89,7 +89,7 @@
         <div class="summaryt">
           
         
-        We spend the majority of our time in front of screens. It’s mostly one of computer/tablet/phone/tv1. These are primarily on platforms the user controls or owns. However I’m surprised we don’t yet have &hellip;</div>
+        We spend the majority of our time in front of screens. It’s mostly one of computer/tablet/phone/tv1. These are largely platforms the user owns or controls. I’m surprised we don’t yet have more &hellip;</div>
         </a>
       </div>
 
