minor edits / typos

--- a/public/index.html
+++ b/public/index.html
@@ -89,8 +89,8 @@
         <div class="summaryt">
           
         
-        Pricing is hard.
-Setting prices for large complicated products is challenging, particularly in Business to Business sales (B2B). B2B sellers may lack important information (e.g. accurate estimates of &hellip;</div>
+        Pricing is hard. This Price is Right contestant would agree.
+Setting prices for large complicated products is challenging, particularly in Business to Business sales (B2B). B2B sellers may lack &hellip;</div>
         </a>
       </div>
 
