--- a/public/index.html
+++ b/public/index.html
@@ -89,8 +89,9 @@
         <div class="summaryt">
           
         
-        Pricing is hard. This Price is Right contestant would agree.
-Setting prices for large complicated products is challenging, particularly in Business to Business sales (B2B). B2B sellers may lack &hellip;</div>
+        Pricing is hard.
+[&hellip;] Price is Right Contestant… struggling
+[&hellip;] This is particularly true with large complicated products, common in Business to Business sales (B2B). B2B sellers may lack &hellip;</div>
         </a>
       </div>
 
