edit about page

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -69,25 +69,25 @@
     <div class="article-content">
       <p>Bryan graduated with honors in Cognitive Neuroscience from Washington University in St. Louis where he also studied American Culture Studies and Political Science. He spent the majority of his high school and undergraduate summers in a Neuropathology research lab studying Alzheimer&rsquo;s disease. His postgraduate career started as a high school math teacher in Durham Public Schools through Teach for America. In 2015 he moved into analytics and worked as a School Performance Analyst in Colorado as part of an Education Pioneers fellowship, before returning to North Carolina where he completed a Master&rsquo;s in Advanced Analytics from NC State.</p>
 
-<p>Bryan has been a Data Scientist at NetApp in the Raleigh-Durham area since July of 2017. There he has worked on a wide range of problems in customer support and sales. Bryan has taken a lead role on the majority of his projects and often has a blend of responsibilities that include defining the problem, conducting analysis, organizing collaborators, communicating with leadership, and building ongoing technical solutions. Some examples of his projects:</p>
+<p>Bryan has been a Data Scientist at NetApp in the Raleigh-Durham area since July of 2017. There he has worked on a wide range of problems in customer support and sales. Examples of projects he has taken leading roles on:</p>
 
 <ul>
-<li>Support ticket prioritization: rank several thousand open support tickets on (an hourly basis) based on risk of escalation for critical case managers</li>
+<li>Support ticket prioritization: rank several thousand open support tickets (on an hourly basis) based on risk of escalation for critical case managers</li>
 <li>Sales forecasting: weekly updates on sales projections across firm products and geographies for operational and planning purposes</li>
-<li>Pricing optimization: develop new pricing methodologies as well as statistical measures for evaluating trends and relationships in pricing</li>
+<li>Pricing optimization: implement statistical measures for setting pricing guidelines and evaluating trends in pricing</li>
 </ul>
 
 <p>Outside of his direct responsibilities, Bryan is active in fostering internal and local Data Science communities. Some examples of his engagements:</p>
 
 <ul>
-<li>Led NetApp study groups on <em>Feature Engineering</em>, <em>Statistical Learning</em>, <em>R for Data Science programming</em>, <em>Pricing Optimization</em> and hosted Kaggle-like prediction competitions</li>
-<li>Give frequent technical talks in NetApp Data Science communities or at Meetups in RTP</li>
+<li>Co-lead NetApp Data Science study group, sessions have included series on <em>Feature Engineering</em>, <em>Statistical Learning</em>, <em>R for Data Science</em>, <em>Pricing Optimization</em> and hosted Kaggle-like prediction competitions</li>
 <li>Promote adoption of best practices, e.g. developing start-to-finish guidelines on how to effectively screen and hire Data Scientists internally</li>
+<li>Give frequent technical talks in NetApp Data Science communities or at Meetups in RTP</li>
 <li>Mentor emerging talent and interns at NetApp and partnered with local universities to support students completing their cap-stone projects in data analytics</li>
-<li>Volunteered with public entities to help them with their reporting and analytics practices</li>
+<li>Volunteered with public entities to help with their analytics practices</li>
 </ul>
 
-<p>Bryan created this blog as a place to document some of his ideas and learning. He wanted to do so in a way that was consistent with the open tutorials, books, and communities that he has learned so much from over the course of his career. To learn more about some of Bryan’s contributions, you can also check-out his github, youtube, or twitter accounts where he is @brshallo. To get into contact, send him a direct message on Twitter or LinkedIn.</p>
+<p>Bryan created this blog as a place to document some of his ideas and learning. He wanted to do so in a way that was consistent with the open tutorials, books, and communities that he has learned from over the course of his career.</p>
 
     </div>
   </article>
