draft of weighted popular vote

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -72,7 +72,7 @@
 <p>Bryan has been a Data Scientist at NetApp in the Raleigh-Durham area since July of 2017. There he has worked on a wide range of problems in customer support and sales. Examples of projects he has taken leading roles on:</p>
 
 <ul>
-<li>Support ticket prioritization: rank several thousand open support tickets (on an hourly basis) based on risk of escalation for critical case managers</li>
+<li>Support ticket prioritization: ranking several thousand open support tickets (on an hourly basis) based on risk of escalation for critical case managers</li>
 <li>Sales forecasting: weekly updates on sales projections across firm products and geographies for operational and planning purposes</li>
 <li>Pricing optimization: implement statistical measures for setting pricing guidelines and evaluating trends in pricing</li>
 </ul>
@@ -80,7 +80,7 @@
 <p>Outside of his direct responsibilities, Bryan is active in fostering internal and local Data Science communities. Some examples of his engagements:</p>
 
 <ul>
-<li>Co-lead NetApp Data Science study group, sessions have included series on <em>Feature Engineering</em>, <em>Statistical Learning</em>, <em>R for Data Science</em>, <em>Pricing Optimization</em> and hosted Kaggle-like prediction competitions</li>
+<li>Co-lead NetApp Data Science study group, sessions have included series&rsquo; on <em>Feature Engineering</em>, <em>Statistical Learning</em>, <em>R for Data Science</em>, <em>Pricing Optimization</em> and hosted Kaggle-like prediction competitions</li>
 <li>Promote adoption of best practices, e.g. developing start-to-finish guidelines on how to effectively screen and hire Data Scientists internally</li>
 <li>Give frequent technical talks in NetApp Data Science communities or at Meetups in RTP</li>
 <li>Mentor emerging talent and interns at NetApp and partnered with local universities to support students completing their cap-stone projects in data analytics</li>
