edits electoral college

--- a/public/index.html
+++ b/public/index.html
@@ -89,7 +89,7 @@
         <div class="summaryt">
           
         
-        In this post I will discuss using a popular vote weighted by the electoral college of each state as a method to elect the president of the United States. This approach would empower voters by &hellip;</div>
+        In this post I will discuss using an electoral college weighted popular vote as a method to elect the president. This approach would empower voters by expanding political influence outside of &hellip;</div>
         </a>
       </div>
 
