--- a/public/index.html
+++ b/public/index.html
@@ -523,7 +523,7 @@ The morning was strikingly dark. Clouds obscured any starlight. A &hellip;</div>
             <a href="/index.xml" type="application/rss+xml" target="_blank">RSS feed</a>
           </li>
           <li>
-            <a class="footer-links-kudos">Blogroll:</a><a href="https://www.r-bloggers.com/" class="footer-links-kudos">R-Bloggers</a>
+            <a>Blogroll:</a><a href="https://www.r-bloggers.com/" class="footer-links-kudos">R-Bloggers</a>
           </li>
         </ul>
       </footer>
