--- a/public/about/index.html
+++ b/public/about/index.html
@@ -73,7 +73,7 @@
 <p>Bryan has been a Data Scientist at NetApp in the Raleigh-Durham area since July of 2017. He has worked on a wide range of problems in customer support and sales. Examples of projects he has taken leading roles on:</p>
 <ul>
 <li>Support ticket prioritization: ranking several thousand open support tickets (on an hourly basis) based on risk of escalation for critical case managers</li>
-<li>Sales forecasting: regular updating sales projections across firm products and geographies for operational and planning purposes</li>
+<li>Sales forecasting: regular updates across firm products and geographies for operational and planning purposes</li>
 <li>Pricing optimization: used statistical measures for setting pricing guidelines and evaluating trends in pricing</li>
 </ul>
 <p>Outside of his direct responsibilities, Bryan is active in fostering internal and local Data Science communities. Examples of his engagements:</p>
