fix typ in dplyr across post

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -68,12 +68,12 @@
 
     <div class="article-content">
       <p><em>Schooling &amp; Early Career:</em></p>
-<p>Bryan graduated with honors in Cognitive Neuroscience from Washington University in St. Louis where he also studied American Culture Studies and Political Science. He spent the majority of his high school and undergraduate summers in a Neuropathology research lab studying Alzheimer&rsquo;s disease. His postgraduate career started as a high school math teacher in Durham Public Schools, North Carolina through Teach for America. In 2015 he moved into analytics as a School Performance Analyst in Colorado through an Education Pioneers fellowship, before returning to North Carolina where he completed a Master&rsquo;s in Advanced Analytics from NC State University.</p>
+<p>Bryan graduated with honors in Cognitive Neuroscience from Washington University in St. Louis where he also studied American Culture Studies and Political Science. He spent the majority of his high school and undergraduate summers in a Neuropathology research lab studying Alzheimer&rsquo;s disease. His postgraduate career started as a high school math teacher in Durham Public Schools, North Carolina through Teach for America. Bryan then moved into analytics as a School Performance Analyst in Colorado through an Education Pioneers fellowship, before returning to North Carolina where he completed a Master&rsquo;s in Advanced Analytics from NC State University.</p>
 <p><em>Career in Data Science:</em></p>
-<p>Bryan has been a Data Scientist at NetApp in the Raleigh-Durham area since July of 2017. He has worked on a wide range of problems in customer support and sales. Examples of projects he has taken leading roles on:</p>
+<p>Bryan has been a Data Scientist at NetApp in the Raleigh-Durham area since July of 2017. He has worked on a wide range of problems in customer support and sales. Examples of his projects:</p>
 <ul>
-<li>Support ticket prioritization: ranking several thousand open support tickets (on an hourly basis) based on risk of escalation for critical case managers</li>
-<li>Sales forecasting: regular updates across firm products and geographies for operational and planning purposes</li>
+<li>Support ticket prioritization: ranking several thousand open support tickets based on risk of escalation for critical case managers</li>
+<li>Sales forecasting: across firm products and geographies for operational and planning purposes</li>
 <li>Pricing optimization: used statistical measures for setting pricing guidelines and evaluating trends in pricing</li>
 </ul>
 <p>Outside of his direct responsibilities, Bryan is active in fostering internal and local Data Science communities. Examples of his engagements:</p>
