minor edits and added craps note

--- a/public/index.html
+++ b/public/index.html
@@ -88,7 +88,8 @@
         <div class="summaryt">
           
         
-        If you have a mechanism available for changing behavior, before applying it you should consider the existing distribution and the potential changes you will cause. In this post I will use incentives &hellip;</div>
+        In this post I will use incentives for sales representatives in pricing to provide examples of factors to consider when attempting to influence an existing distribution.
+For instance, if you have a &hellip;</div>
         </a>
       </div>
 
