--- a/public/about/index.html
+++ b/public/about/index.html
@@ -68,22 +68,23 @@
 
     <div class="article-content">
       <p><em>Schooling &amp; Early Career:</em></p>
-<p>Bryan graduated with honors in Cognitive Neuroscience from Washington University in St. Louis where he also studied American Culture Studies and Political Science. He spent the majority of his high school and undergraduate summers in a Neuropathology research lab studying Alzheimer&rsquo;s disease. His postgraduate career started as a high school math teacher in Durham Public Schools, North Carolina through Teach for America. Bryan then moved into analytics as a School Performance Analyst in Colorado through an Education Pioneers fellowship, before returning to North Carolina where he completed a Master&rsquo;s in Advanced Analytics from NC State University.</p>
+<p>Bryan graduated with honors in Cognitive Neuroscience from Washington University in St. Louis where he also studied American Culture Studies and Political Science. He spent the majority of his high school and undergraduate summers in a Neuropathology research lab studying Alzheimer&rsquo;s disease. After graduating, he started his career as a high school math teacher in Durham Public Schools (North Carolina) through <a href="https://www.teachforamerica.org/">Teach for America</a>. Bryan moved into analytics through an <a href="https://www.educationpioneers.org/">Education Pioneers</a> fellowship as a School Performance Analyst in Colorado and then returned to North Carolina where he completed a <a href="https://analytics.ncsu.edu/">Master&rsquo;s in Advanced Analytics</a> from NC State University.</p>
 <p><em>Career in Data Science:</em></p>
-<p>Bryan has been a Data Scientist at NetApp in the Raleigh-Durham area since July of 2017. He has worked on a wide range of problems in customer support and sales. Examples of his projects:</p>
+<p>Bryan has been a Data Scientist at <a href="https://www.netapp.com/">NetApp</a> in the Raleigh-Durham area since July of 2017. He has worked on a wide range of problems in customer support, sales, and pricing. Examples of his projects:</p>
 <ul>
-<li>Support ticket prioritization: ranking several thousand open support tickets based on risk of escalation for critical case managers</li>
-<li>Sales forecasting: across firm products and geographies for operational and planning purposes</li>
-<li>Pricing optimization: used statistical measures for setting pricing guidelines and evaluating trends in pricing</li>
+<li>Support ticket prioritization: Rate open customer support tickets according to risk of escalation.</li>
+<li>Forecasting: Produce thousands of sales forecasts across products and geographies.</li>
+<li>Price optimization: Establish statistical bases for price and discount guidance on product configurations.</li>
 </ul>
 <p>Outside of his direct responsibilities, Bryan is active in fostering internal and local Data Science communities. Examples of his engagements:</p>
 <ul>
-<li>Co-lead NetApp Data Science study group, sessions have included series on <em>Feature Engineering</em>, <em>Statistical Learning</em>, <em>R for Data Science</em>, <em>Pricing Optimization</em> and internal prediction competitions</li>
-<li>Promote adoption of best practices, e.g. developing start-to-finish guidelines on how to effectively screen and hire Data Scientists internally</li>
-<li>Frequent technical talks in NetApp Data Science communities or Meetups in RTP</li>
-<li>Mentor emerging talent at NetApp and partnered with local universities to support students completing their cap-stone projects in data analytics</li>
+<li>Co-lead NetApp Data Science study group on topics including <em>Feature Engineering</em>, <em>Statistical Learning</em>, <em>Pricing Optimization</em>, and internal prediction competitions.</li>
+<li>Promote adoption of improved practices in areas such as hiring Data Scientists and setting-up workflows for predictive modeling.</li>
+<li>Regular presenter to NetApp Data Science community and local technical communities. See <a href="https://www.youtube.com/watch?v=gme4Fb9JVjk&amp;list=PL2f6B79nBqL16QFte8fN_GWDtJwZDXt95">YouTube</a> for examples of recorded presentations.</li>
+<li>Mentor emerging NetApp talent and supported local university students completing their cap-stone projects in data analytics.</li>
+<li>&ldquo;NetApp Service Award&rdquo; recipient for recognition of volunteerism.</li>
 </ul>
-<p>Bryan created this blog as a place to document some of his ideas and learning. He wanted to do so in a way that was consistent with the open tutorials, books, and communities he has learned from over the course of his career.</p>
+<p>Bryan created this blog as a place to document some of his ideas and learning. He wanted to do so in a way that was consistent with the open tutorials, books, software, and communities he has learned from over the course of his career.</p>
 
     </div>
   </article>
