--- a/public/about/index.html
+++ b/public/about/index.html
@@ -68,21 +68,21 @@
 
     <div class="article-content">
       <p><em>Schooling &amp; Early Career:</em></p>
-<p>Bryan graduated with honors in Cognitive Neuroscience from Washington University in St. Louis where he also studied American Culture Studies and Political Science. He spent the majority of his high school and undergraduate summers in a Neuropathology research lab studying Alzheimer&rsquo;s disease. After graduating, he started his career as a high school math teacher in Durham Public Schools (North Carolina) through <a href="https://www.teachforamerica.org/">Teach for America</a>. Bryan moved into analytics through an <a href="https://www.educationpioneers.org/">Education Pioneers</a> fellowship as a School Performance Analyst in Colorado and then returned to North Carolina where he completed a <a href="https://analytics.ncsu.edu/">Master&rsquo;s in Advanced Analytics</a> from NC State University.</p>
+<p>Bryan graduated with honors in Cognitive Neuroscience from Washington University in St. Louis where he also studied American Culture Studies and Political Science. He spent the majority of his high school and undergraduate summers in a Neuropathology research lab studying Alzheimer&rsquo;s disease. After graduating, he started his career as a high school math teacher in Durham Public Schools, North Carolina, through <a href="https://www.teachforamerica.org/">Teach for America</a>. Bryan moved into analytics through an <a href="https://www.educationpioneers.org/">Education Pioneers</a> fellowship as a School Performance Analyst in Colorado and then returned to North Carolina where he completed a <a href="https://analytics.ncsu.edu/">Master&rsquo;s in Advanced Analytics</a> from NC State University.</p>
 <p><em>Career in Data Science:</em></p>
 <p>Bryan has been a Data Scientist at <a href="https://www.netapp.com/">NetApp</a> in the Raleigh-Durham area since July of 2017. He has worked on a wide range of problems in customer support, sales, and pricing. Examples of his projects:</p>
 <ul>
 <li>Support ticket prioritization: Rate open customer support tickets according to risk of escalation.</li>
-<li>Forecasting: Produce thousands of sales forecasts across products and geographies.</li>
+<li>Forecasting: Produce automated sales forecasts across product lines and geographies.</li>
 <li>Price optimization: Establish statistical bases for price and discount guidance on product configurations.</li>
 </ul>
 <p>Outside of his direct responsibilities, Bryan is active in fostering internal and local Data Science communities. Examples of his engagements:</p>
 <ul>
 <li>Co-lead NetApp Data Science study group on topics including <em>Feature Engineering</em>, <em>Statistical Learning</em>, <em>Pricing Optimization</em>, and internal prediction competitions.</li>
-<li>Promote adoption of improved practices in areas such as hiring Data Scientists and setting-up workflows for predictive modeling.</li>
+<li>Promote adoption of improved practices in areas such as hiring Data Scientists and workflows for predictive modeling.</li>
 <li>Regular presenter to NetApp Data Science community and local technical communities. See <a href="https://www.youtube.com/watch?v=gme4Fb9JVjk&amp;list=PL2f6B79nBqL16QFte8fN_GWDtJwZDXt95">YouTube</a> for examples of recorded presentations.</li>
 <li>Mentor emerging NetApp talent and supported local university students completing their cap-stone projects in data analytics.</li>
-<li>&ldquo;NetApp Service Award&rdquo; recipient for recognition of volunteerism.</li>
+<li>&ldquo;NetApp Service Award&rdquo; recipient in recognition of volunteerism.</li>
 </ul>
 <p>Bryan created this blog as a place to document some of his ideas and learning. He wanted to do so in a way that was consistent with the open tutorials, books, software, and communities he has learned from over the course of his career.</p>
 
