--- a/public/index.html
+++ b/public/index.html
@@ -88,7 +88,8 @@
         <div class="summaryt">
           
         
-        TLDR: Prediction intervals can be a helpful indicator for understanding your model and for evaluating potential observations. Prediction Intervals can be thought of as a mix of uncertainty in &hellip;</div>
+        Prediction intervals provide a measure of uncertainty on individual observations. This post…
+[&hellip;] I use the R programming language and the tidyverse + tidymodels suite of packages to create all &hellip;</div>
         </a>
       </div>
 
